<resources>
    <string name="app_name">Group assignment</string>
    <string name="remove">Remove</string>
    <string name="Study">Study</string>
    <string name="Level">Level</string>
    <string name="Note">Note</string>
    <string name="Quiz">Quiz</string>
    <string name="DogName">Dog Name</string>
    <string name="Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="Temperament">Temperament</string>
    <string name="Origin">Origin</string>
    <string name="LifeSpan">Life span</string>
    <string name="bred_for">Bred_for</string>
    <string name="breed_group">breed_group</string>
    <string name="COMMENT">COMMENT</string>
    <string name="add">Add</string>
    <string name="Topic">Topic</string>
    <string name="Content">Content</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="index">index</string>
    <string name="num">num</string>
    <string name="CheckBox">Check Box</string>
    <string name="Test">Test</string>
    <string name="wikipedia">Search more information</string>
    <string name="socre">Your Score</string>
    <string name="back">Back</string>
    <string name="trueChoice">true</string>
    <string name="falseChoice">false</string>
    <string name="share">Share</string>
    <string name="random10questons">you must have study some dogs before doing this quiz3 and please input the dog name</string>
    <string name="submittogetscore">submit to get score</string>
    <string name="totalmark">Total</string>
    <string name="difficult">Difficult Score</string>
    <string name="watchvideo">Watch Video</string>
</resources>
