<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="330dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_style"
                    android:textColor="@color/textcolor"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/DogName"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:text="@string/Origin"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/textcolor" />

            <View
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:textColor="@color/textcolor"
                android:text="Textview" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:text="@string/LifeSpan"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/textcolor" />

            <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:textColor="@color/textcolor"
                android:text="TextView" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:text="@string/bred_for"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/textcolor" />

            <View
                android:id="@+id/divider13"
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:textColor="@color/textcolor"
                android:text="TextView" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:text="@string/breed_group"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/textcolor" />

            <View
                android:id="@+id/divider14"
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:textColor="@color/textcolor"
                android:text="TextView" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:text="@string/Temperament"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/textcolor" />

            <View
                android:id="@+id/divider15"
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:textColor="@color/textcolor"
                android:text="TextView" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:text="@string/wikipedia"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/textcolor" />

            <View
                android:id="@+id/divider16"
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_style"
                android:textColor="@color/textcolor"
                />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="500dp">


                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="51dp"
                    android:layout_marginEnd="55dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:text="@string/Note"
                    android:textStyle="bold"
                    android:background="@drawable/text_style"
                    android:textColor="@color/textcolor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintBottom_toTopOf="@+id/editText24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="44dp"
                    android:text="@string/add"
                    android:background="@drawable/text_style"
                    android:textColor="@color/textcolor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText24"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:id="@+id/editText24"
                    android:layout_width="411dp"
                    android:layout_height="270dp"
                    android:layout_marginBottom="128dp"
                    android:text="EditText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>